# aeon-trespass-expert-1

./: .editorconfig  .eslintrc.cjs  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.claude/: settings.json
apps/pipeline/: pyproject.toml
apps/pipeline/src/atr_pipeline/: __init__.py
apps/pipeline/src/atr_pipeline/cli/: main.py
apps/pipeline/src/atr_pipeline/cli/commands/: audit_cmd.py  bench_cmd.py  eval_cmd.py  ingest.py  patch.py  qa.py  release.py  run.py  runs.py  verify_extraction_cmd.py  verify_refs_cmd.py
apps/pipeline/src/atr_pipeline/config/: __init__.py  loader.py  models.py
apps/pipeline/src/atr_pipeline/eval/: __init__.py  audit_models.py  audit_report.py  audit_runner.py  bench_loader.py  bench_models.py  bench_report.py  bench_runner.py  comparator.py  confidence_policy.py  confidence_scorer.py  config_loader.py  cross_stage_refs.py  cross_stage_runner.py  fixture_manifest.py  invariant_models.py  invariant_runner.py  invariants.py  metrics.py  models.py  overlay.py  report.py  runner.py  thresholds.py
apps/pipeline/src/atr_pipeline/registry/: db.py  events.py  runs.py
apps/pipeline/src/atr_pipeline/runner/: cache_keys.py  executor.py  log_file.py  manifest_builder.py  plan.py  registry.py  result.py  stage_context.py  stage_protocol.py  summary_builder.py
apps/pipeline/src/atr_pipeline/services/assets/: __init__.py  identity.py  inline_placer.py  registry.py  resolver.py
apps/pipeline/src/atr_pipeline/services/llm/: anthropic_adapter.py  base.py  factory.py  fallback.py  gemini_adapter.py  gemini_cli_adapter.py  mock_translator.py  openai_adapter.py  prompt_builder.py
apps/pipeline/src/atr_pipeline/services/pdf/: image_extractor.py  raster_provider.py  rasterizer.py
apps/pipeline/src/atr_pipeline/stages/assistant/: chunker.py  indexer.py  stage.py
apps/pipeline/src/atr_pipeline/stages/extract_layout/: difficulty_scorer.py  docling_adapter.py  fallback_stub.py  stage.py
apps/pipeline/src/atr_pipeline/stages/extract_native/: evidence_extractor.py  evidence_text.py  evidence_vectors.py  pymupdf_extractor.py  stage.py
apps/pipeline/src/atr_pipeline/stages/glossary/: registry_loader.py
apps/pipeline/src/atr_pipeline/stages/ingest/: manifest_builder.py  pdf_fingerprint.py  stage.py
apps/pipeline/src/atr_pipeline/stages/patch/: applicator.py
apps/pipeline/src/atr_pipeline/stages/publish/: bundle_builder.py  stage.py
apps/pipeline/src/atr_pipeline/stages/qa/: auto_fix.py  registry.py  review_pack.py  stage.py  waivers.py
apps/pipeline/src/atr_pipeline/stages/render/: annotation_builder.py  glossary_builder.py  nav_builder.py  page_builder.py  presentation_classifier.py  search_builder.py  stage.py
apps/pipeline/src/atr_pipeline/stages/structure/: block_builder.py  block_filter.py  block_postprocess.py  furniture.py  reading_order.py  real_block_builder.py  region_graph.py  semantic_resolver.py  stage.py  text_normalize.py
apps/pipeline/src/atr_pipeline/stages/symbols/: catalog_loader.py  matcher.py  stage.py
apps/pipeline/src/atr_pipeline/stages/translation/: planner.py  stage.py  validator.py
apps/pipeline/src/atr_pipeline/store/: __init__.py  artifact_ref.py  artifact_store.py  atomic_write.py  pathing.py
apps/pipeline/src/atr_pipeline/utils/: hashing.py
apps/pipeline/tests/contract/: test_asset_registry_roundtrip.py  test_evidence_resolved_jsonschema.py  test_evidence_resolved_negative.py  test_evidence_resolved_roundtrip.py  test_icon_inline_roundtrip.py  test_p0082_symbol_legend.py  test_raster_meta_roundtrip.py  test_schema_roundtrip.py
apps/pipeline/tests/integration/: test_block_type_survival.py  test_cli_run.py  test_cli_run_page_filter.py  test_cli_run_partial.py  test_cli_run_source_only.py  test_cli_smoke.py  test_hard_route_regression.py  test_hooks.py  test_source_edition_e2e.py  test_walking_skeleton_pipeline.py
apps/pipeline/tests/unit/: test_check_code_erosion.py  test_check_config_health.py  test_export_to_web.py  test_export_validation.py
apps/pipeline/tests/unit/cli/: test_patch_command.py  test_qa_command.py  test_run.py  test_runs_command.py
apps/pipeline/tests/unit/config/: test_loader.py  test_structure_config.py
apps/pipeline/tests/unit/eval/: test_audit_command.py  test_audit_runner.py  test_bench_command.py  test_bench_models.py  test_bench_runner.py  test_bench_smoke.py  test_comparator.py  test_confidence_policy.py  test_confidence_scorer.py  test_config_propagation.py  test_cross_stage_mapping_failures.py  test_cross_stage_refs.py  test_cross_stage_runner.py  test_eval_command.py  test_fixture_manifest.py  test_golden_fixtures.py  test_golden_refresh_guard.py  test_invariants.py  test_metrics.py  test_overlay.py  test_runner.py  test_thresholds.py
apps/pipeline/tests/unit/registry/: test_db.py
apps/pipeline/tests/unit/runner/: test_cache_keys.py  test_executor.py  test_manifest_builder.py  test_page_filter.py  test_plan.py  test_provenance.py  test_registry.py  test_summary_builder.py
apps/pipeline/tests/unit/services/assets/: test_identity.py  test_inline_placer.py  test_registry.py  test_resolver.py
apps/pipeline/tests/unit/services/llm/: test_adapters.py  test_factory.py  test_fallback.py  test_gemini_cli_extract.py  test_prompt_builder.py
apps/pipeline/tests/unit/services/pdf/: test_image_extractor.py  test_raster_provider.py
apps/pipeline/tests/unit/stages/assistant/: test_chunker.py  test_indexer.py  test_stage.py
apps/pipeline/tests/unit/stages/extract_layout/: test_difficulty_scorer.py  test_stage.py
apps/pipeline/tests/unit/stages/extract_native/: test_evidence_extractor.py  test_evidence_vectors.py  test_pymupdf_extractor.py  test_stage.py
apps/pipeline/tests/unit/stages/ingest/: test_stage.py
apps/pipeline/tests/unit/stages/patch/: test_applicator.py  test_patch_schema.py
apps/pipeline/tests/unit/stages/publish/: test_bundle_builder.py  test_publish_stage.py  test_release_refs.py
apps/pipeline/tests/unit/store/: test_artifact_store.py
(+313 files in other folders)
