[project]
name = "aeon-trespass-expert"
version = "0.1.0"
description = "IR-first document compiler for Aeon Trespass rulebook translation"
requires-python = ">=3.12"
readme = "README.md"

[tool.uv]
package = false

[tool.uv.workspace]
members = [
  "packages/schemas/python",
  "apps/pipeline",
]

[tool.uv.sources]
atr-schemas = { workspace = true }
atr-pipeline = { workspace = true }

[dependency-groups]
dev = [
  "atr-schemas",
  "atr-pipeline",
  "ruff>=0.9",
  "mypy>=1.14",
  "pytest>=8.0",
  "pytest-cov>=6.0",
  "pytest-timeout>=2.3",
  "pre-commit>=4.0",
  "import-linter>=2.11",
  "jsonschema>=4.23",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["apps/pipeline/src", "packages/schemas/python"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF", "C901", "PLR0912", "PLR0913", "PLR0915"]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.pylint]
max-args = 7
max-branches = 12
max-statements = 50

[tool.ruff.lint.per-file-ignores]
# Tracked by S5U-144 (Epic 3: Config-driven structure recovery)
"apps/pipeline/src/atr_pipeline/stages/structure/real_block_builder.py" = ["C901", "PLR0912", "PLR0915"]
# Tracked by S5U-143 (Epic 2: Expand QA — translation planner complexity)
"apps/pipeline/src/atr_pipeline/stages/translation/planner.py" = ["C901", "PLR0912"]

[tool.ruff.lint.isort]
known-first-party = ["atr_pipeline", "atr_schemas"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "fitz.*", "docling.*", "cv2.*", "paddleocr.*",
    "PIL", "PIL.*",
    "openai", "openai.*",
    "anthropic", "anthropic.*",
    "google", "google.genai", "google.genai.*",
]
ignore_missing_imports = true

[tool.importlinter]
root_packages = ["atr_pipeline"]

[[tool.importlinter.contracts]]
name = "Pipeline layer contract"
type = "layers"
layers = [
    "atr_pipeline.cli",
    "atr_pipeline.runner",
    "atr_pipeline.stages | atr_pipeline.eval",
    "atr_pipeline.services | atr_pipeline.store | atr_pipeline.registry",
    "atr_pipeline.config",
    "atr_pipeline.utils",
]
# stages → runner.stage_context is intentional: stages need the runtime context
# dataclass, but must not import orchestration logic (executor, registry, plan).
# stages.structure → eval.confidence_scorer is intentional: the structure stage
# calls the deterministic scorer to compute ConfidenceMetrics in production.
# services.pdf.raster_provider → store.artifact_store is intentional: the raster
# provider bridges rendering (service) and content-addressed storage (store).
ignore_imports = [
    "atr_pipeline.stages.structure.stage -> atr_pipeline.eval.confidence_scorer",
    "atr_pipeline.services.pdf.raster_provider -> atr_pipeline.store.artifact_store",
    "atr_pipeline.stages.ingest.stage -> atr_pipeline.runner.stage_context",
    "atr_pipeline.stages.extract_native.stage -> atr_pipeline.runner.stage_context",
    "atr_pipeline.stages.extract_layout.stage -> atr_pipeline.runner.stage_context",
    "atr_pipeline.stages.symbols.stage -> atr_pipeline.runner.stage_context",
    "atr_pipeline.stages.structure.stage -> atr_pipeline.runner.stage_context",
    "atr_pipeline.stages.translation.stage -> atr_pipeline.runner.stage_context",
    "atr_pipeline.stages.render.stage -> atr_pipeline.runner.stage_context",
    "atr_pipeline.stages.qa.stage -> atr_pipeline.runner.stage_context",
    "atr_pipeline.stages.publish.stage -> atr_pipeline.runner.stage_context",
    "atr_pipeline.stages.assistant.stage -> atr_pipeline.runner.stage_context",
]

[tool.pytest.ini_options]
testpaths = ["apps/pipeline/tests"]
addopts = "-ra -q"
markers = [
    "slow: marks tests as slow (skipped by pre-commit hook)",
]
