[project]
name = "atr-pipeline"
version = "0.1.0"
description = "ATR document compiler pipeline"
requires-python = ">=3.12"
dependencies = [
  "atr-schemas",
  "typer>=0.15",
  "PyMuPDF>=1.25",
  "opencv-python-headless>=4.10",
  "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
llm = [
  "openai>=1.60",
  "anthropic>=0.42",
  "google-genai>=1.0",
]

[tool.uv.sources]
atr-schemas = { workspace = true }

[project.scripts]
atr = "atr_pipeline.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atr_pipeline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
